# Hackathon-2021-CheckMeet

./: .editorconfig  .gitignore  README.md  checkmeet.schema.json  iamonameeting.schema.json
.github/workflows/: publish.yml  service.yml  test.yml
doc/: BuildTheDevice.md  QuickStart.md
firmware/: CMakeLists.txt  Pipfile  README.md  firmware.ino  hydro_updater.h  lib_firmware.h  platformio.ini  public.key  serialnames.h  serialnames.py  stdextra.h  test.sh  update-tool.py
firmware/catch/: catch_firmware.cpp  catch_hydro_updater.cpp  catch_serialnames.cpp  catch_stdextra.cpp
firmware/include/: lib_firmware.h
models/: BasePlate.stl  ClearCamera.stl  ClearMic.stl  House.stl  House_Button.stl  House_Button_BigDisplay.stl  House_Button_SmallDisplay.stl  README.md
service/: .gitignore  Pipfile  build_dmg.sh  common.py  driver_auto.py  driver_fake.py  driver_linux.py  driver_mac.py  driver_win.py  emulator.py  fake.json  google_calendar.py  google_credentials.json  imonameeting.py  launch_emulator.py  launch_imonameeting.py  launch_service.py  readme.md  requirements.txt  service.py
